--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,22 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Blank
+    <ion-title >
+      Apagador IOT
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+<ion-content [fullscreen]="true" class="ion-padding">
+<ion-img *ngIf="estado===false" src="assets/img/foco_apagado.png"></ion-img>
+<ion-img *ngIf="estado===true" src="assets/img/focoencendido.png"></ion-img>
+<ion-row>
+  <ion-col size="4"></ion-col>
+  <ion-col size="4">
+    <ion-toggle class="ion-padding" color="success"
+    (ionChange)="cambio(estado)"
+    [(ngModel)]="estado"
+    ></ion-toggle>
+  </ion-col>
+  <ion-col size="4"></ion-col>
+</ion-row>
 </ion-content>
